# Sheet-Metal-Optimisation

./: .gitignore  CMakeLists.txt  README.md  bindings.cpp  demo.py  demo_2.py  experimental.py  makefile  nfp_core.hpp  placer.py  test_nfp_core.cpp
